# curso_streamlit_crud

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml
src/: create_cliente.py  edit_cliente.py  read_cliente.py
