[tool.poetry]
name = "curso-streamlit-crud"
version = "0.1.0"
description = ""
authors = ["Luciano Borba"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.34.0"
black = "^24.4.2"
isort = "^5.13.2"
pre-commit = "^3.7.1"
taskipy = "^1.12.2"
pydocstyle = "^6.3.0"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.23"
mkdocstrings = {extras = ["python"], version = "^0.25.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.task]
